fixed welcome message alignment and coaching alignment

--- a/src/components/Main/Welcome.css
+++ b/src/components/Main/Welcome.css
@@ -37,7 +37,7 @@
     margin-top: 4%;
 }
 
-.welcome-btn {
+.WelcomeBtn {
     background-color: var(--grey-color);
     text-align: center;
     font-size: 14px;
@@ -51,6 +51,6 @@
     margin-top: 4%;
 }
 
-.welcome-btn:hover {
+.WelcomeBtn:hover {
   padding-right: 12%;
 }
